backend:create statisics
