# backend/gen/http/openapi3.yaml
@@ -165,6 +165,25 @@ paths:
                         application/vnd.goa.error:
                             schema:
                                 $ref: '#/components/schemas/Error'
+    /statistics:
+        get:
+            tags:
+                - statistics
+            summary: Получение статисики
+            description: Получение статисики
+            operationId: statistics#get-trainings-statisticd
+            responses:
+                "200":
+                    description: OK response.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/TrainingsStatistics'
+                            example:
+                                average_duration: 5936829066984796487
+                                reps_count: 519286289227740233
+                                sets_count: 5407571904544667042
+                                trainings_count: 5926098798039360065
     /trainings:
         post:
             tags:
@@ -180,25 +199,41 @@ paths:
                             $ref: '#/components/schemas/CreateTrainingPayload'
                         example:
                             date: "2025-12-25"
-                            duration: 4541791234550504212
+                            duration: 3422303554000800197
                             exercises:
-                                - exercise_id: eac346ec-8c0d-4378-81f2-0f2df404b9ff
+                                - exercise_id: eac346ec-dbb1-41ce-8ea8-ac6eaf4650b2
                                   sets:
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                                - exercise_id: eac346ec-8c0d-4378-81f2-0f2df404b9ff
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                - exercise_id: eac346ec-dbb1-41ce-8ea8-ac6eaf4650b2
                                   sets:
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                                    - reps: 46900354374985834
-                                      weight: 0.520894057493718
-                            title: 09h
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                - exercise_id: eac346ec-dbb1-41ce-8ea8-ac6eaf4650b2
+                                  sets:
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                - exercise_id: eac346ec-dbb1-41ce-8ea8-ac6eaf4650b2
+                                  sets:
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                                    - reps: 5931942138589796971
+                                      weight: 0.7840723453135222
+                            title: l95
             responses:
                 "201":
                     description: Created response.
@@ -210,7 +245,7 @@ paths:
                                 created_at: "1983-07-10T03:03:55Z"
                                 date: "1977-11-29"
                                 duration: 1180415307606265183
-                                id: Provident culpa debitis nam dolores rerum.
+                                id: Dolores rerum.
                                 title: Alias sunt ullam blanditiis voluptates ab.
                 "400":
                     description: 'bad_request: Bad Request response.'
@@ -653,7 +688,7 @@ components:
                     format: date
                 duration:
                     type: integer
-                    example: 4921014594779509474
+                    example: 3196923671565711816
                     format: int64
                     minimum: 1
                 exercises:
@@ -673,25 +708,13 @@ components:
                               weight: 0.5872247866349914
                             - reps: 4759131713011614080
                               weight: 0.5872247866349914
-                        - exercise_id: d1c19714-eef8-4310-9f94-107456eb525d
-                          sets:
-                            - reps: 4759131713011614080
-                              weight: 0.5872247866349914
-                            - reps: 4759131713011614080
-                              weight: 0.5872247866349914
-                        - exercise_id: d1c19714-eef8-4310-9f94-107456eb525d
-                          sets:
-                            - reps: 4759131713011614080
-                              weight: 0.5872247866349914
-                            - reps: 4759131713011614080
-                              weight: 0.5872247866349914
                 title:
                     type: string
-                    example: 5f0
+                    example: 3iy
                     maxLength: 50
             example:
                 date: "2025-12-25"
-                duration: 8702114208606812436
+                duration: 6961526606152073740
                 exercises:
                     - exercise_id: d1c19714-eef8-4310-9f94-107456eb525d
                       sets:
@@ -717,7 +740,7 @@ components:
                           weight: 0.5872247866349914
                         - reps: 4759131713011614080
                           weight: 0.5872247866349914
-                title: smq
+                title: q5w
             required:
                 - title
                 - date
@@ -798,17 +821,17 @@ components:
                     format: uuid
                 reps:
                     type: integer
-                    example: 2788550870037666751
+                    example: 2326393132887261780
                     format: int64
                     minimum: 1
                 weight:
                     type: number
-                    example: 0.7457863783130383
+                    example: 0.9609672630286371
                     format: double
             example:
                 id: 550e8400-e29b-41d4-a716-446655440000
-                reps: 2902473628799041522
-                weight: 0.21811531019788294
+                reps: 4069016428993016903
+                weight: 0.006842673006197912
             required:
                 - reps
         ExerciseSetPayload:
@@ -816,16 +839,16 @@ components:
             properties:
                 reps:
                     type: integer
-                    example: 3190010706143649995
+                    example: 5947121309456152114
                     format: int64
                     minimum: 1
                 weight:
                     type: number
-                    example: 0.47851234633420636
+                    example: 0.5193532107765355
                     format: double
             example:
-                reps: 3911705512636430647
-                weight: 0.6945594643814792
+                reps: 8772786375939936132
+                weight: 0.3266265851841484
             required:
                 - reps
         Exercises:
@@ -904,12 +927,6 @@ components:
                         - id: 550e8400-e29b-41d4-a716-446655440000
                           reps: 9208414693283396710
                           weight: 0.32873104718627366
-                        - id: 550e8400-e29b-41d4-a716-446655440000
-                          reps: 9208414693283396710
-                          weight: 0.32873104718627366
-                        - id: 550e8400-e29b-41d4-a716-446655440000
-                          reps: 9208414693283396710
-                          weight: 0.32873104718627366
                 title:
                     type: string
                     description: Название упражнения
@@ -926,6 +943,9 @@ components:
                     - id: 550e8400-e29b-41d4-a716-446655440000
                       reps: 9208414693283396710
                       weight: 0.32873104718627366
+                    - id: 550e8400-e29b-41d4-a716-446655440000
+                      reps: 9208414693283396710
+                      weight: 0.32873104718627366
                 title: Жим лежа на скамье
             required:
                 - id
@@ -936,29 +956,29 @@ components:
             properties:
                 created_at:
                     type: string
-                    example: "1991-01-01T15:11:32Z"
+                    example: "1986-10-23T07:58:12Z"
                     format: date-time
                 date:
                     type: string
-                    example: "2005-12-07"
+                    example: "1977-06-24"
                     format: date
                 duration:
                     type: integer
-                    example: 9182443964653466284
+                    example: 2163212712472428321
                     format: int64
                 id:
                     type: string
                     description: uuid
-                    example: Accusantium veniam hic.
+                    example: Vero deserunt aut sint qui animi fugit.
                 title:
                     type: string
-                    example: Cumque sint.
+                    example: Eum asperiores corporis rem doloremque.
             example:
-                created_at: "2008-08-14T02:06:37Z"
-                date: "1973-01-26"
-                duration: 2950087635943388876
-                id: Doloribus voluptate quaerat numquam.
-                title: Adipisci a.
+                created_at: "1978-01-30T00:18:19Z"
+                date: "2015-11-26"
+                duration: 4083536110717352302
+                id: Dolores omnis cum enim blanditiis voluptatem.
+                title: Quae ratione impedit placeat.
             required:
                 - id
                 - title
@@ -969,15 +989,15 @@ components:
             properties:
                 created_at:
                     type: string
-                    example: "1992-06-01T17:11:59Z"
+                    example: "1989-08-12T10:26:24Z"
                     format: date-time
                 date:
                     type: string
-                    example: "1970-02-14"
+                    example: "1993-09-09"
                     format: date
                 duration:
                     type: integer
-                    example: 2267797079030435567
+                    example: 4059389246561155296
                     format: int64
                 exercises:
                     type: array
@@ -1016,50 +1036,18 @@ components:
                               reps: 9208414693283396710
                               weight: 0.32873104718627366
                           title: Жим лежа на скамье
-                        - id: 550e8400-e29b-41d4-a716-446655440000
-                          muscle_group: 1
-                          sets:
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                          title: Жим лежа на скамье
-                        - id: 550e8400-e29b-41d4-a716-446655440000
-                          muscle_group: 1
-                          sets:
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                            - id: 550e8400-e29b-41d4-a716-446655440000
-                              reps: 9208414693283396710
-                              weight: 0.32873104718627366
-                          title: Жим лежа на скамье
                 id:
                     type: string
                     description: uuid
-                    example: Vero nesciunt repudiandae repellat sed omnis.
+                    example: Cumque ab.
                 title:
                     type: string
-                    example: Quo ullam.
+                    example: Assumenda repellendus in totam.
             description: Модель Списка Тренировок с UUID
             example:
-                created_at: "2007-03-23T22:31:28Z"
-                date: "1987-10-14"
-                duration: 7827859883965028292
+                created_at: "1982-06-20T17:28:41Z"
+                date: "2008-01-01"
+                duration: 6282896918657067595
                 exercises:
                     - id: 550e8400-e29b-41d4-a716-446655440000
                       muscle_group: 1
@@ -1109,8 +1097,8 @@ components:
                           reps: 9208414693283396710
                           weight: 0.32873104718627366
                       title: Жим лежа на скамье
-                id: Optio dolorum.
-                title: Nemo voluptates occaecati ut.
+                id: Minima odio ut accusamus ut.
+                title: Quibusdam tempora corporis eum quo sint.
             required:
                 - id
                 - title
@@ -1121,7 +1109,7 @@ components:
             properties:
                 exercise_id:
                     type: string
-                    example: 0618e45f-c5c3-49ab-bb7d-2a066975c95b
+                    example: 56f3d0bb-d776-4987-80ec-e757245da3ad
                     format: uuid
                 sets:
                     type: array
@@ -1137,8 +1125,12 @@ components:
                         - reps: 4759131713011614080
                           weight: 0.5872247866349914
             example:
-                exercise_id: e420a59f-3df0-4e31-9d1f-589893ee085c
+                exercise_id: cf93a2b2-05d3-4385-8e0e-496ce93ad14f
                 sets:
+                    - reps: 4759131713011614080
+                      weight: 0.5872247866349914
+                    - reps: 4759131713011614080
+                      weight: 0.5872247866349914
                     - reps: 4759131713011614080
                       weight: 0.5872247866349914
                     - reps: 4759131713011614080
@@ -1146,13 +1138,46 @@ components:
             required:
                 - exercise_id
                 - sets
+        TrainingsStatistics:
+            type: object
+            properties:
+                average_duration:
+                    type: integer
+                    description: Средяя продолжительность тренировок
+                    example: 7824610926820301655
+                    format: int64
+                    minimum: 0
+                reps_count:
+                    type: integer
+                    description: Всего повторений
+                    example: 2368694521606211152
+                    format: int64
+                    minimum: 0
+                sets_count:
+                    type: integer
+                    description: Всего подходов
+                    example: 379253008154049668
+                    format: int64
+                    minimum: 0
+                trainings_count:
+                    type: integer
+                    description: Всего тренировок
+                    example: 6602655186242142660
+                    format: int64
+                    minimum: 0
+            description: Модель статистики
+            example:
+                average_duration: 243691161321549629
+                reps_count: 1629009566429459410
+                sets_count: 7864675930682548529
+                trainings_count: 5636570392175755656
         WorkoutModel:
             type: object
             properties:
                 create_at:
                     type: string
                     description: Дата создания
-                    example: "1977-11-13T05:36:54Z"
+                    example: "2015-09-25T11:37:30Z"
                     format: date-time
                 date:
                     type: string
@@ -1174,7 +1199,7 @@ components:
                     maxLength: 50
             description: Модель тренировок
             example:
-                create_at: "2011-06-30T13:19:33Z"
+                create_at: "1993-11-11T12:04:51Z"
                 date: "2025-12-08"
                 duration: "5440"
                 title: Тренировка верхней поверхности бедра
@@ -1183,3 +1208,5 @@ tags:
       description: Сервис для CRUD операция с моделью Exercises(Упражнения)
     - name: trainings
       description: Сервис для CRUD операция с моделью Training(Тренировки)
+    - name: statistics
+      description: Получение статистики по тренировкам
