# backend/gen/http/statistics/server/encode_decode.go
@@ -1,0 +1,28 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// statistics HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+
+	statistics "github.com/GrudTrigger/training_tracker/backend/gen/statistics"
+	goahttp "goa.design/goa/v3/http"
+)
+
+// EncodeGetTrainingsStatisticdResponse returns an encoder for responses
+// returned by the statistics get-trainings-statisticd endpoint.
+func EncodeGetTrainingsStatisticdResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.(*statistics.TrainingsStatistics)
+		enc := encoder(ctx, w)
+		body := NewGetTrainingsStatisticdResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
