# backend/gen/http/statistics/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the statistics service.
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+// GetTrainingsStatisticdStatisticsPath returns the URL path to the statistics service get-trainings-statisticd HTTP endpoint.
+func GetTrainingsStatisticdStatisticsPath() string {
+	return "/statistics"
+}
