# backend/gen/http/statistics/server/server.go
@@ -1,0 +1,124 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// statistics HTTP server
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+
+	statistics "github.com/GrudTrigger/training_tracker/backend/gen/statistics"
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Server lists the statistics service endpoint HTTP handlers.
+type Server struct {
+	Mounts                 []*MountPoint
+	GetTrainingsStatisticd http.Handler
+}
+
+// MountPoint holds information about the mounted endpoints.
+type MountPoint struct {
+	// Method is the name of the service method served by the mounted HTTP handler.
+	Method string
+	// Verb is the HTTP method used to match requests to the mounted handler.
+	Verb string
+	// Pattern is the HTTP request path pattern used to match requests to the
+	// mounted handler.
+	Pattern string
+}
+
+// New instantiates HTTP handlers for all the statistics service endpoints
+// using the provided encoder and decoder. The handlers are mounted on the
+// given mux using the HTTP verb and path defined in the design. errhandler is
+// called whenever a response fails to be encoded. formatter is used to format
+// errors returned by the service methods prior to encoding. Both errhandler
+// and formatter are optional and can be nil.
+func New(
+	e *statistics.Endpoints,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) *Server {
+	return &Server{
+		Mounts: []*MountPoint{
+			{"GetTrainingsStatisticd", "GET", "/statistics"},
+		},
+		GetTrainingsStatisticd: NewGetTrainingsStatisticdHandler(e.GetTrainingsStatisticd, mux, decoder, encoder, errhandler, formatter),
+	}
+}
+
+// Service returns the name of the service served.
+func (s *Server) Service() string { return "statistics" }
+
+// Use wraps the server handlers with the given middleware.
+func (s *Server) Use(m func(http.Handler) http.Handler) {
+	s.GetTrainingsStatisticd = m(s.GetTrainingsStatisticd)
+}
+
+// MethodNames returns the methods served.
+func (s *Server) MethodNames() []string { return statistics.MethodNames[:] }
+
+// Mount configures the mux to serve the statistics endpoints.
+func Mount(mux goahttp.Muxer, h *Server) {
+	MountGetTrainingsStatisticdHandler(mux, h.GetTrainingsStatisticd)
+}
+
+// Mount configures the mux to serve the statistics endpoints.
+func (s *Server) Mount(mux goahttp.Muxer) {
+	Mount(mux, s)
+}
+
+// MountGetTrainingsStatisticdHandler configures the mux to serve the
+// "statistics" service "get-trainings-statisticd" endpoint.
+func MountGetTrainingsStatisticdHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/statistics", f)
+}
+
+// NewGetTrainingsStatisticdHandler creates a HTTP handler which loads the HTTP
+// request and calls the "statistics" service "get-trainings-statisticd"
+// endpoint.
+func NewGetTrainingsStatisticdHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		encodeResponse = EncodeGetTrainingsStatisticdResponse(encoder)
+		encodeError    = goahttp.ErrorEncoder(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "get-trainings-statisticd")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "statistics")
+		var err error
+		res, err := endpoint(ctx, nil)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil && errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			if errhandler != nil {
+				errhandler(ctx, w, err)
+			}
+		}
+	})
+}
