# backend/gen/http/statistics/server/types.go
@@ -1,0 +1,38 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// statistics HTTP server types
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package server
+
+import (
+	statistics "github.com/GrudTrigger/training_tracker/backend/gen/statistics"
+)
+
+// GetTrainingsStatisticdResponseBody is the type of the "statistics" service
+// "get-trainings-statisticd" endpoint HTTP response body.
+type GetTrainingsStatisticdResponseBody struct {
+	// Всего тренировок
+	TrainingsCount *int `form:"trainings_count,omitempty" json:"trainings_count,omitempty" xml:"trainings_count,omitempty"`
+	// Всего подходов
+	SetsCount *int `form:"sets_count,omitempty" json:"sets_count,omitempty" xml:"sets_count,omitempty"`
+	// Всего повторений
+	RepsCount *int `form:"reps_count,omitempty" json:"reps_count,omitempty" xml:"reps_count,omitempty"`
+	// Средяя продолжительность тренировок
+	AverageDuration *int `form:"average_duration,omitempty" json:"average_duration,omitempty" xml:"average_duration,omitempty"`
+}
+
+// NewGetTrainingsStatisticdResponseBody builds the HTTP response body from the
+// result of the "get-trainings-statisticd" endpoint of the "statistics"
+// service.
+func NewGetTrainingsStatisticdResponseBody(res *statistics.TrainingsStatistics) *GetTrainingsStatisticdResponseBody {
+	body := &GetTrainingsStatisticdResponseBody{
+		TrainingsCount:  res.TrainingsCount,
+		SetsCount:       res.SetsCount,
+		RepsCount:       res.RepsCount,
+		AverageDuration: res.AverageDuration,
+	}
+	return body
+}
