# backend/gen/statistics/endpoints.go
@@ -1,0 +1,39 @@
+// Code generated by goa v3.23.3, DO NOT EDIT.
+//
+// statistics endpoints
+//
+// Command:
+// $ goa gen github.com/GrudTrigger/training_tracker/backend/design
+
+package statistics
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "statistics" service endpoints.
+type Endpoints struct {
+	GetTrainingsStatisticd goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "statistics" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		GetTrainingsStatisticd: NewGetTrainingsStatisticdEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "statistics" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.GetTrainingsStatisticd = m(e.GetTrainingsStatisticd)
+}
+
+// NewGetTrainingsStatisticdEndpoint returns an endpoint function that calls
+// the method "get-trainings-statisticd" of service "statistics".
+func NewGetTrainingsStatisticdEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		return s.GetTrainingsStatisticd(ctx)
+	}
+}
